# batoto-parser

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
examples/: example_usage.py
src/batoto_parser/: __init__.py  __version__.py  cli.py  parser.py
tests/: test_parser.py
